# eca-web

./: .gitignore  Makefile.am  README.md  bootstrap-configure  configure.ac
src/: agent-helper-bt.py  agent-helper.py  bluetooth.py  bluezutils.py  cellular.py  config.py  connect.py  eca.py  edit.py  rescan.py  technology.py  tethering.py  util.py  view.py
src/static/: eca.css  help.html  util.js
src/templates/: base.html  bluetooth.html  bt_devices.html  bt_help.html  cellular.html  cellular_help.html  edit.html  error.html  layout.html  listing.html  login.html  login_error.html  logout.html  name.html  new_login.html  property.html  service.html
